documentos: actualizar README con estado de migración a JAVA 26, Spring Boot 4.0.1 y Angular 21