@@ -1,22 +1,25 @@
 # 🛒 Jamallo – Full-Stack E-Commerce
 
 E-Commerce web application desarrollada con Angular (frontend) y Spring Boot (backend).  
-Proyecto completo orientado a buenas prácticas, experiencia de usuario y arquitectura real en producción.  
+Proyecto completo orientado a buenas prácticas, experiencia de usuario y arquitectura real en producción.
 
---------------------------------------------------  
+> 🚧 **ESTADO ACTUAL:** Este repositorio está en proceso de migración a las versiones más recientes del stack tecnológico.  
+> Versión estable anterior: Java 25, Spring Boot 4.0.0, Angular 17  
+> **Versión objetivo:** Java 26, Spring Boot 4.0.1, Angular 21
 
-## 👨‍💻 Autor  
+--------------------------------------------------
+
+## 👨‍💻 Autor
 
 ### Alba Prado Fernández  
 Full-Stack Developer  
-✨ https://github.com/jamallo  
+✨ https://github.com/jamallo
 
---------------------------------------------------  
-
+--------------------------------------------------
 
 ## 🚀 Descripción
 
-Jamallo es una plataforma de comercio electrónico con funcionalidades completas:  
+Jamallo es una plataforma de comercio electrónico con funcionalidades completas:
 
 ✔ Catálogo de productos  
 ✔ Gestión de carrito de compra  
@@ -24,67 +27,94 @@ Jamallo es una plataforma de comercio electrónico con funcionalidades completas
 ✔ Autenticación con roles (usuario / admin)  
 ✔ Panel de administración de productos  
 ✔ APIs REST seguras  
-✔ Integración frontend ↔ backend  
+✔ Integración frontend ↔ backend
 
---------------------------------------------------  
+--------------------------------------------------
 
-## 🧱 Arquitectura del proyecto  
+## 🧱 Arquitectura del proyecto
 
-### 📂 El repositorio está dividido en dos partes principales:  
+### 📂 El repositorio está dividido en dos partes principales:
 
-E-commerce/  
-├── ecommerce-web/          ← Frontend Angular  
-├── service/                ← Backend Spring Boot (Java 25)  
-└── README.md  
+ecommerce-v2-actualizado/
+├── ecommerce-web/ ← Frontend Angular
+├── service/ ← Backend Spring Boot
+└── README.md
 
---------------------------------------------------  
 
-## 🧪 Tech Stack  
+--------------------------------------------------
 
-### 🔁 Frontend  
+## 🧪 Tech Stack (Versión objetivo)
 
-Angular 17  
-Angular Material (UI + animaciones)  
-RxJS / Reactive Forms  
-SCSS con temas personalizados (verde & oro)  
-Stripe para pago (estructura lista para integrar)  
+### 🔁 Frontend
 
-### 🛠 Backend  
+| Tecnología | Versión |
+|------------|--------|
+| Angular | 21 |
+| Angular Material | 21 |
+| RxJS / Signals | Última |
+| SCSS | Temas personalizados (verde & oro) |
+| Stripe | Estructura lista para integrar |
 
-Java 25  
-Spring Boot 4.0  
-Spring Web (REST API)  
-Spring Security + JWT  
-Spring Data JPA  
-Base de datos (MySQL/PostgreSQL según configuración)  
+### 🛠 Backend
 
-Este backend ofrece APIs seguras que atienden a:  
-autenticación y autorización  
-gestión de usuarios y roles  
-productos, carrito y pedidos  
-endpoints protegidos por roles  
+| Tecnología | Versión |
+|------------|--------|
+| Java | 26 |
+| Spring Boot | 4.0.1 |
+| Spring Security + JWT | Última |
+| Spring Data JPA | Última |
+| Base de datos | PostgreSQL 17+ |
 
---------------------------------------------------  
+### 🗄️ Base de datos
 
-## ✨ Características destacadas  
+| Tecnología | Versión |
+|------------|--------|
+| PostgreSQL | 17+ |
+| pgAdmin | 9.12 |
 
-### 🧑‍💻 Frontend Angular  
+--------------------------------------------------
+
+## 🔄 Migración en curso
+
+Este repositorio está siendo actualizado desde versiones anteriores. Los cambios principales incluyen:
+
+### Backend (Spring Boot)
+- [ ] Migración de `javax.*` a `jakarta.*`
+- [ ] Actualización de Spring Security (eliminación de `WebSecurityConfigurerAdapter`)
+- [ ] Configuración de JVM para Java 26 (`--add-opens` flags)
+- [ ] Verificación de compatibilidad de dependencias
+
+### Frontend (Angular)
+- [ ] Actualización de Angular 17 → 21 (vía migración incremental)
+- [ ] Migración a Signals y zoneless change detection
+- [ ] Actualización de PrimeNG (si aplica) a versión compatible
+- [ ] Migración de Karma a Vitest
+
+### Base de datos
+- [x] Pendiente actualización PostgreSQL a versión 17+
+- [x] Pendiente actualización pgAdmin a 9.12
+
+--------------------------------------------------
+
+## ✨ Características destacadas
+
+### 🧑‍💻 Frontend Angular
 
 ✔ Diseño responsive y moderno  
 ✔ Estado global del carrito reactivo  
 ✔ Animaciones UI (animación del total, feedback de acciones)  
 ✔ Resumen de compra en tiempo real  
-✔ Componentes standalone Angular 17  
+✔ Componentes standalone
 
-### 🔐 Autenticación & Roles  
+### 🔐 Autenticación & Roles
 
 ✔ Login / Logout  
 ✔ Gestión de roles (usuario y admin)  
-✔ Directiva *appHasRole para control de UI según permisos  
+✔ Directiva *appHasRole para control de UI según permisos
 
---------------------------------------------------  
+--------------------------------------------------
 
-## 🛍️ Flujo de usuario  
+## 🛍️ Flujo de usuario
 
 1 - El usuario navega catálogo de productos  
 2 - Añade productos al carrito  
@@ -92,42 +122,60 @@ endpoints protegidos por roles
 4 - Rellena dirección de envío  
 5 - Visualiza resumen de pedido en vivo  
 6 - Confirma pago / datos finales  
-7 - Backend registra la orden  
+7 - Backend registra la orden
 
---------------------------------------------------  
+--------------------------------------------------
 
-## 🧠 Diseño UI  
+## 🧠 Diseño UI
 
-El frontend destaca por:  
+El frontend destaca por:
 
 ✅ Mejores prácticas de UX  
 ✅ Feedback visual consistente  
 ✅ Responsividad móvil y escritorio  
 ✅ Colores temáticos personalizados  
-✅ Navbar animado y badge reactivo  
+✅ Navbar animado y badge reactivo
 
---------------------------------------------------  
+--------------------------------------------------
 
-## 📊 Visión técnica  
+## 📊 Visión técnica
 
-### 🛠 Backend — Arquitectura REST  
+### 🛠 Backend — Arquitectura REST
 
-El backend expone API RESTful seguras usando Spring Security + JWT. Ejemplos:  
-POST /auth/login  
-GET  /productos  
-POST /pedidos  
+El backend expone API RESTful seguras usando Spring Security + JWT. Ejemplos:
+- `POST /auth/login`
+- `GET /productos`
+- `POST /pedidos`
 
-Los servicios están estructurados por capas:  
-Controller → Service → Repository → Entity  
-Esto facilita la mantenibilidad y pruebas unitarias.  
+Los servicios están estructurados por capas:
 
---------------------------------------------------  
+Controller → Service → Repository → Entity
 
-## 🧩 Buenas prácticas incluidas  
+
+Esto facilita la mantenibilidad y pruebas unitarias.
+
+--------------------------------------------------
+
+## 🧩 Buenas prácticas incluidas
 
 ✔ Separación de responsabilidades  
 ✔ Angular Standalone Components  
 ✔ Reactive Forms con validación  
 ✔ UX intuitivo  
 ✔ JWT y roles en backend  
-✔ API versionada y escalable  
+✔ API versionada y escalable
+
+--------------------------------------------------
+
+## 📦 Instalación y ejecución
+
+### Prerrequisitos
+- JDK 26
+- Node.js 20+ (compatible con Angular 21)
+- PostgreSQL 17+
+- Angular CLI 21
+
+### Backend
+```bash
+cd service
+./mvnw spring-boot:run
